# pg-lakehouse

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
iceberg-lite/: Cargo.toml
iceberg-lite/src/: delete_file_index.rs  delete_vector.rs  engine.rs  error.rs  lib.rs  metadata_columns.rs  table.rs
iceberg-lite/src/arrow/: caching_delete_file_loader.rs  delete_file_loader.rs  delete_filter.rs  reader.rs  record_batch_projector.rs  schema.rs  value.rs
iceberg-lite/src/catalog/: mod.rs
iceberg-lite/src/catalog/memory/: catalog.rs
iceberg-lite/src/expr/: mod.rs  predicate.rs  term.rs
iceberg-lite/src/expr/visitors/: manifest_evaluator.rs  page_index_evaluator.rs  strict_metrics_evaluator.rs  strict_projection.rs
iceberg-lite/src/inspect/: manifests.rs  snapshots.rs
iceberg-lite/src/io/: file_io.rs  mod.rs  object_cache.rs  storage_fs.rs  storage_memory.rs
iceberg-lite/src/puffin/: compression.rs  metadata.rs  reader.rs  test_utils.rs  writer.rs
iceberg-lite/src/scan/: context.rs  mod.rs  task.rs
iceberg-lite/src/spec/: manifest_list.rs  snapshot.rs  table_metadata.rs  table_metadata_builder.rs  transform.rs  view_metadata_builder.rs
iceberg-lite/src/spec/manifest/: _serde.rs  mod.rs  writer.rs
iceberg-lite/src/spec/values/: datum.rs  literal.rs
iceberg-lite/src/transaction/: action.rs  append.rs  mod.rs  snapshot.rs  sort_order.rs  update_location.rs  update_properties.rs  update_statistics.rs  upgrade_format_version.rs
iceberg-lite/src/writer/: mod.rs
iceberg-lite/src/writer/base_writer/: data_file_writer.rs  equality_delete_writer.rs
iceberg-lite/src/writer/file_writer/: mod.rs  parquet_writer.rs  rolling_writer.rs
iceberg-lite/src/writer/partitioning/: clustered_writer.rs  fanout_writer.rs  mod.rs  unpartitioned_writer.rs
pg-iceberg/: Cargo.toml  pg_iceberg.control
pg-iceberg/sql/: bootstrap.sql  finalize.sql
pg-iceberg/src/: error.rs  lib.rs
pg-iceberg/src/access/: ddl.rs  dml.rs  index.rs  mod.rs  modify.rs  pending_deletes.rs  relation.rs  scan.rs
pg-iceberg/src/catalog/: iceberg_catalog.rs  iceberg_metadata.rs  mod.rs  schema_mapping.rs  table_handler.rs
pg-iceberg/src/hooks/: mod.rs  object_access.rs  table_option_cache.rs  table_options.rs  tablespace.rs  tablespace_options.rs
pg-iceberg/src/storage/: local.rs  mod.rs  object.rs
pg-iceberg/src/wal/: mod.rs  record.rs  rmgr.rs
pg-iceberg/tests/pg_regress/expected/: table_option_test.out  table_storage_lifecycle.out  tablespace_option_test.out
pg-iceberg/tests/pg_regress/sql/: table_option_test.sql  table_storage_lifecycle.sql  tablespace_option_test.sql
pg-tam/: Cargo.toml  rustfmt.toml
pg-tam-macros/: Cargo.toml
pg-tam-macros/src/: lib.rs
pg-tam/src/: api.rs  catalog.rs  data.rs  diag.rs  dml.rs  handles.rs  lib.rs  memory.rs  pg_wrapper.rs  registry.rs  relation.rs  resource.rs  storage_options.rs  tablespace.rs  utility_hook.rs  utils.rs
pg-tam/src/access/: ddl.rs  dml.rs  index.rs  mod.rs  pending_delete.rs  relation.rs  scan.rs
pg-tam/src/hooks/: mod.rs  object_access_hook.rs  utility_hook.rs
pg-tam/src/option/: am_cache.rs  mod.rs  storage.rs  storage_option.rs  table.rs  table_option.rs  tablespace.rs  tablespace_cache.rs  tablespace_option.rs  utils.rs
pg-tam/src/wal/: mod.rs  record.rs  rmgr.rs
