[workspace]
members = [
    "pg-tam",
    "pg-tam-macros",
    "pg-iceberg",
]
resolver = "2"

# The [workspace.package] section defines default values for all member packages.
[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.85.1"
homepage = "https://github.com/robertmu/pg-lakehouse"
repository = "https://github.com/robertmu/pg-lakehouse"

[workspace.dependencies]
pgrx = { version = "0.16.0" }
pgrx-tests = { version = "=0.16.0" }

# The 'dev' profile is used when you run `cargo build`.
[profile.dev]
panic = "unwind"
lto = "thin"

# The 'release' profile is used for production builds with `cargo build --release`.
[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
