[package]
name = "iceberg-lite"
version = { workspace = true }
authors = ["Robert Mu. https://github.com/robertmu"]
license = { workspace = true }
description = "iceberg-lite library."
homepage = "https://github.com/robertmu/pg-lakehouse"
repository = "https://github.com/robertmu/pg-lakehouse"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "extension", "access-method"]
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = "1.0"
anyhow = "1.0.72"
apache-avro = { version = "0.21", features = ["zstandard"] }
array-init = "2"
arrow-arith = "57.0"
arrow-array = "57.0"
arrow-buffer = "57.0"
arrow-cast = "57.0"
arrow-ord = "57.0"
arrow-schema = "57.0"
arrow-select = "57.0"
arrow-string = "57.0"
as-any = "0.3.2"
async-trait = "0.1.89"
aws-config = "1.8.7"
aws-sdk-glue = "1.39"
aws-sdk-s3tables = "1.28.0"
backon = "1.6.0"
base64 = "0.22.1"
bimap = "0.6"
bytes = "1.10"
chrono = "0.4.41"
clap = { version = "4.5.48", features = ["derive", "cargo"] }
ctor = "0.2.8"
derive_builder = "0.20"
dirs = "6"
enum-ordinalize = "4.3.0"
env_logger = "0.11.8"
expect-test = "1"
faststr = "0.2.31"
flate2 = "1.1.5"
fnv = "1.0.7"
fs-err = "3.1.0"
futures = "0.3"
hive_metastore = "0.2.0"
home = "=0.5.11"
http = "1.2"
indicatif = "0.18"
itertools = "0.13"
libtest-mimic = "0.8.1"
linkedbytes = "0.1.8"
log = "0.4.28"
metainfo = "0.7.14"
mimalloc = "0.1.46"
minijinja = "2.12.0"
mockall = "0.13.1"
mockito = "1"
motore-macros = "0.4.3"
murmur3 = "0.5.2"
num-bigint = "0.4.6"
once_cell = "1.20"
opendal = "0.55.0"
ordered-float = "4"
parquet = "57.1.0"
pilota = "0.11.10"
port_scanner = "0.1.5"
pretty_assertions = "1.4"
rand = "0.8.5"
regex = "1.11.3"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
roaring = { version = "0.11" }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["rc"] }
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
serde_json = "1.0.142"
serde_repr = "0.1.16"
serde_with = "3.4"
sqllogictest = "0.28.3"
sqlx = { version = "0.8.1", default-features = false }
stacker = "0.1.20"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.18"
tokio = { version = "1.47", default-features = false }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
typed-builder = "0.20"
url = "2.5.7"
uuid = { version = "1.18", features = ["v7"] }
zstd = "0.13.3"
moka = { version = "0.12.10", features = ["sync"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
ctor = "0.2.8"
expect-test = "1"
mockall = "0.13.1"
rand = "0.8.5"
regex = "1.11.3"
minijinja = "2.12.0"

[package.metadata.cargo-machete]
# These dependencies are added to ensure minimal dependency version
ignored = ["tap"]
