[package]
name = "pg-tam-macros"
version = { workspace = true }
authors = ["Robert Mu. https://github.com/robertmu"]
license = { workspace = true }
description = "Postgres Table Access Method framework macros for pg-tam"
homepage = "https://github.com/robertmu/pg-lakehouse"
repository = "https://github.com/robertmu/pg-lakehouse"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "extension", "access-method"]
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
